# aurum

./: .env.example  .gitignore  .mocharc.json  AVAIL_FEEDBACK.md  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
relayer/: .env.example  Cargo.toml  Dockerfile
relayer/.sqlx/: query-11f03f0be1e0faba73fce00ce2622c9299e7394992ae626dbbc2b077497e9725.json  query-1800c32719f720089cdb0b91404845a849182d1a778ca7acc6ff93e2fdb3da88.json  query-2fad96d2fd7711e7348f233e051ebc1e0d52286978f37b6d5bba1e3e4cab6ddb.json  query-343d324ca2e8b92ba58d30d24ca2e5cdad8bb8b4f1f057faa1bf08f1af37a9bc.json  query-34ab049bd7faa9f3435187f222617b8a8df5724034ea022817de0cae099c8ffb.json  query-3727b683e586d0f3419bcbea70488e06b877c8d53e1da053b01e514a7c421938.json  query-38cd8e6b8b7b018dacb6d7793bc0085ebed7d0787499f6ec553f0722171fff7a.json  query-42f19e1ba741b930a2b63904953f05e6ff8ec455489777e598863393bb6307a4.json  query-46284166882e8032e08819e6337a960832e0c41de0a8ee4e8048556816245c64.json  query-5a813d941ff8e6550b221f39f6a30d87db416df3c895602363033e78e6859d7c.json  query-5c040fb40d6f03952671620b89b2eaa8748bed03723fc5f04de316d3176a0ca3.json  query-5d5433af6b5da22ff89b203f0a2855830054bf6cee1f7f8c66864df144a0fb0d.json  query-5f9c3e1e5c7d1a280229e7619e92bfb976a5d43b756771b0061105b2c311e83f.json  query-62ef6ed08ab7053c040970f60957432b47be229666b25e21d0e38fe5cf4a9b89.json  query-62f8b53efd5c34f751fc50f677dade7d14509fe80146eaec2e0ccc7958ca2ff4.json  query-7141165aca5bc9994cff5cf445e0f83b909e67781492bed21d05f495eb323987.json  query-7a86e69fd2ded16543b45ab11afc6263de59f22a607e0ca856db31f2dd7e880c.json  query-7ef085371fc00bb4f5a718d44b67d11477e52c2b9860132545fc704484d954e3.json  query-8f1d668e0accec27791c0a1c69c71afe4a6fd94935abd80db9e1853682017d4e.json  query-92787552613b3506049117eceb705aa70de0b10b6b17bc2eb6927e29983753a9.json  query-98477659d91a847a36d242642e15da9a377437fe04b273e2eb5c6bb76731a8a2.json  query-a51d4b7f76a2690618c06f94e04fcc3129000643e8f8bbeb596f95e53c558940.json  query-ab133f60cd634c8f695658e289907058cabd3e5bff95b1243a3e65d9fa73fb85.json  query-b08af7e43589f5a06a2bf301b353c33e6f2c0a23cd6eefdd2577bd3877d0a1fa.json  query-b3395c97f001dad6d3978d9d92e7e6a0a1ee9462ae7a74cd6f6f942750b51fd8.json  query-be67e5596890340bbfdf7d2717b72706167e3e194481eb7a98c9f8755d29b857.json  query-c1398bc05894689f7e597437fcdc7ef3eea716443c09bd267c38bc55e9b9777b.json  (+10 more)
(+150 files in other folders)
