[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relayer"
path = "src/main.rs"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "blockchain_usage"
path = "examples/blockchain_usage.rs"

[dev-dependencies]
tokio-test = "0.4"
