[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relayer"
path = "src/main.rs"

[lib]
name = "relayer"
path = "src/lib.rs"

[features]
default = []
sqlx-prepare-cli = ["pg-embed"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros", "bigdecimal", "migrate"] }
ethers = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
sha2 = "0.10"
fastrand = "2.0"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["cors", "trace", "fs"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
http = "0.2"
once_cell = "1.19"
avail-rust-client = { version = "0.4.1-rc.1", default-features = false, features = ["native", "reqwest"] }
pg-embed = { version = "0.7.1", default-features = false, features = ["rt_tokio"], optional = true }
hypersync-client = "0.7"
url = "2.4"
nexus-sdk = "0.0.0"

[[example]]
name = "blockchain_usage"
path = "examples/blockchain_usage.rs"

[[example]]
name = "scheduler_usage"
path = "examples/scheduler_usage.rs"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
serde_json = "1.0"
pg-embed = { version = "0.7.1", default-features = false, features = ["rt_tokio"] }
which = "4.4"
